Issue #78: Tweak on page wrapping for configuration page display.

--- a/styles/base/_layers.scss
+++ b/styles/base/_layers.scss
@@ -62,7 +62,8 @@
 
 .gin-layer-wrapper {
   &:has(> .view),
-  &:has(> .admin-list) {
+  &:has(> .admin-list),
+  &:has(> .admin) {
     border: none;
     padding: 0;
     background: none;
